# ionosphere

./: .dockerignore  .gitignore  .sprite  LICENSE  README.md  fly.appview.toml  fly.web.toml  package.json  panproto.toml  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
.panproto/: HEAD  index.json
.panproto/refs/tags/: v0.5.0
apps/data/: highlights.json
apps/ionosphere/: Dockerfile  next.config.ts  package.json  tsconfig.tsbuildinfo
apps/ionosphere-appview/: .sprite  Dockerfile  docker-compose.yml  fly.toml  package.json
apps/ionosphere-appview/tools/: .sprite  diarize.py  evaluate.py  extract_audio.py  merge_enrichment.py  pyproject.toml  retranscribe-all-sprites.sh  test_evaluate.py  test_merge.py  transcribe-sprite.mjs  transcribe-vods-worker.mjs  transcribe_enhanced.py
docs/: alignment-verification-notes.md  architecture.md  panproto-wishlist.md
formats/tv.ionosphere/: ionosphere.lexicon.json  nlpAnnotations.lexicon.json  package.json  tsconfig.json
pipeline/: pyproject.toml
pipeline/nlp/: apply_clusters.py  cluster_concepts.py  encoding.py  entities.py  export_streams.py  llm_concepts.py  paragraphs.py  run.py  run_streams.py  sentences.py  speaker_lookup.py  topics.py
pipeline/tests/: test_entities.py  test_paragraphs.py  test_run.py  test_sentences.py  test_speaker_lookup.py  test_topics.py
scripts/: align-mentions-to-talks.mjs  backfill-mention-profiles.mjs  explore-mentions.mjs  extract-highlights.mjs  extract-projects-llm.mjs  fetch-blogs-extra.mjs  fetch-discussion-extras.mjs  fetch-discussion.mjs  fetch-mentions.mjs
(+198 files in other folders)
