[project]
name = "ionosphere-tools"
version = "0.1.0"
description = "Audio enrichment tools for ionosphere boundary detection"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "pyannote-audio>=3.1",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["."]
